[package]
name = "codedefender"
version = "0.1.0"
edition = "2024"
authors = ["Back Engineering Labs, Inc <contact@back.engineering>"]
description = "A macro used to mark a function for obfuscation by CodeDefender"
license = "MIT"
repository = "https://github.com/codedefender-io/sdk"
keywords = ["CodeDefender", "dll", "windows", "export", "linker", "macro"]
categories = ["development-tools", "no-std"]

[lib]
proc-macro = false