[package]
name = "codedefender"
version = "0.1.6"
edition = "2024"
authors = ["Back Engineering Labs, Inc <contact@back.engineering>"]
description = "A macro used to mark a function for obfuscation by CodeDefender"
license = "MIT"
repository = "https://github.com/codedefender-io/sdk"
keywords = ["windows", "export", "linker", "macro"]
categories = ["development-tools", "no-std"]

[lib]
proc-macro = true

[dependencies]
paste = "1.0.15"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.102", features = ["full"] }